--- a/javascript/index2.html
+++ b/javascript/index2.html
@@ -12,9 +12,9 @@
       <div class="main">
         <p>X is What % Of Y</p>
         <form id="xIsWhatPercentOfY">
-          <input type="text" id="numField1" />
-          <input type="text" id="numField2" /><br /><br />
-          <input type="submit" value="Calculate" />
+          <input type="text" id="numField1" placeholder="Enter X" />
+          <input type="text" id="numField2" placeholder="Enter Y" /><br /><br />
+          <input type="submit" value="Calculate" class="button" />
           <h3 id="resultField">result : 100%</h3>
         </form>
       </div>
