--- a/html/hello.html
+++ b/html/hello.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html>  
-    <head>
-            <title>
-                Hello developes
-            </title>
-    </head>
-    <body>
-        <h1>Welcome to developes</h1>
-        <h2>Want to learn how to code?</h2>
-        <h3>Then you have come to the right place</h3>
-        <h4>So lets get started now!</h4>
-        <p>If you wan tto learn then there is no better than developes.<br>
-             Developes is the world's most <b>effective</b> and <i>affordable</i> platform 
-             to learn how to code!
-             <br><br><hr>Also join our email list to get awesome <em>free</em> stuff!
-        </p>
-    </body>
+<html>
+  <head>
+    <title>
+      Hello developes
+    </title>
+  </head>
+  <body>
+    <h1>Welcome to developes</h1>
+    <h2>Want to learn how to code?</h2>
+    <h3>Then you have come to the right place</h3>
+    <h4>So lets get started now! making tests</h4>
+    <p>
+      If you wan tto learn then there is no better than developes.<br />
+      Developes is the world's most <b>effective</b> and
+      <i>affordable</i> platform to learn how to code! <br /><br />
+      <hr />
+      Also join our email list to get awesome <em>free</em> stuff!
+    </p>
+  </body>
 </html>
